== 1.2.0 / 2011-??-??

* New Features
    * added c3p0 pool configurations.
    * option to choose between JPA(Entity Manager) or Hibernate(Session).
    * option to override models package.
    * option to override controllers package.
    * option to override repositories package.

* Improvements
    * removed unnecessary EJB provider configuration.
    * moving hibernate configurations to hibernate.properties.
    * update method on generic repository nows return the updated entity.
    * better log4j pattern.
    * removing the hibernate configuration repositories from build tools.
    * updated hsqldb to 2.2.4.
    * updated freemarker to 2.3.18.
    * updated hibernate to 3.6.6.Final.
    * updated hibernate validator to 4.2.0.Final.
    * updated maven war plugin to 2.1.1.
    * updated maven cobertura plugin to 2.5.1.

* Bugfixes
    * jetty hot deploy on ant projects.
    * script tag in main.jsp was closing twice.
    * gradle does not load test classpath correctly.
    * scaffold models with compound names.
    * does not create new project if a folder with the project name exists.

== 1.1.0 / 2011-03-02

* New Features
    * JPA 2 support using hibernate 3.6.1.Final. (Issue 13)
    * ant task to minify js and css. (Issue 27)
    * created prelude to automatic import taglibs in jsp.

* Improvements
    * updated hibernate validator to 4.1.0.Final.
    * updated vraptor to 3.3.1.
    * updated jquery to 1.5.1.
    * added head with title tag for sitemesh capture it in jsp views.
    * changed html DTD to XHTML.
    * declared css encoding (UTF-8).
    * created application.js.
    * better repository and controller encapsulation.
    * better controller template.
    * specified the exact location of SuppressWarnings, like Clean Code technique.
    * changed jeweler to bundler. (Issue 26)

== 1.0.0 / 2011-02-04

* Improvements
    * updated vraptor to 3.3.0
    * updated jquery to 1.5
    * decorators folder inside WEB-INF (Issue 24)