@@ -1,18 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId><%= @project_name %></groupId>
-	<artifactId><%= @project_name %></artifactId><%- unless @options[:heroku] %>
-	<packaging>war</packaging><%- end %>
+	<groupId>heroku</groupId>
+	<artifactId>heroku</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name><%= @project_name %></name>
+	<name>heroku</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<build>
-		<outputDirectory>${basedir}/<%= Configuration::WEB_INF %>/classes</outputDirectory>
+		<outputDirectory>${basedir}/src/main/webapp/WEB-INF/classes</outputDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -49,7 +48,7 @@
 						<contextPath>/</contextPath>
 					</webAppConfig>
 				</configuration>
-			</plugin><%- if @options[:heroku] %>
+			</plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
@@ -73,38 +72,88 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin><%- end %>
+            </plugin>
 		</plugins>
 	</build>
 
-	<dependencies><% @dependency_manager.compile_scope.each do |dependency| %>
+	<dependencies>
 		<dependency>
-			<groupId><%= dependency.group %></groupId>
-			<artifactId><%= dependency.name %></artifactId>
-			<version><%= dependency.version %></version><% if dependency.has_exclusions? %>
-			<exclusions><% dependency.exclusions.each do |exclusion| %>
-				<exclusion>
-					<groupId><%= exclusion.group %></groupId>
-					<artifactId><%= exclusion.name %></artifactId>
-				</exclusion><% end %>
-			</exclusions><% end %>
-		</dependency><% end %>
+			<groupId>br.com.caelum</groupId>
+			<artifactId>vraptor</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>sitemesh</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>3.6.6.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>3.6.6.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.2.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>7.4.4.v20110707</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jsp-2.1-glassfish</artifactId>
+			<version>2.1.v20100127</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 
-		<!-- Test dependencies --><% @dependency_manager.test_scope.each do |dependency| %>
+		<!-- Test dependencies -->
 		<dependency>
-			<groupId><%= dependency.group %></groupId>
-			<artifactId><%= dependency.name %></artifactId>
-			<version><%= dependency.version %></version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
 			<scope>test</scope>
-		</dependency><% end %>
-
-		<!-- Provided dependencies --><% @dependency_manager.provided_scope.each do |dependency| %>
+		</dependency>
 		<dependency>
-			<groupId><%= dependency.group %></groupId>
-			<artifactId><%= dependency.name %></artifactId>
-			<version><%= dependency.version %></version>
-			<scope>provided</scope>
-		</dependency><% end %>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.5</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Provided dependencies -->
 	</dependencies>
 
 	<reporting>
